tests/fixtures/invalid/pow_dict_bool_bytes.py
# Cannot call pow() with Dict[str, int], Bool, Bytes
x = pow({"a": 1}, True, b"hello")
